--- a/Coordinate/Coordinate/MainWindow.xaml
+++ b/Coordinate/Coordinate/MainWindow.xaml
@@ -1,15 +1,24 @@
 ﻿<Window x:Class="Coordinate.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="886" Width="1016">
-    <Grid>
-        <TextBlock Name="textBlock1" HorizontalAlignment="Left" Height="157" Margin="108,600,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Width="838" FontSize="48"/>
+        Title="MainWindow" Height="968.7" Width="1630">
+    <Grid Margin="0,0,2,0">
+        <TextBlock Name="txtLeftHand" HorizontalAlignment="Left" Height="75" Margin="172,600,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Width="586" FontSize="48"/>
         <Image Name="image1" HorizontalAlignment="Left" Height="480" VerticalAlignment="Top" Width="620" Margin="78,40,0,0"/>
-        <Button Name="btn1" Content="Start" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Margin="108,555,0,0" Click="btn1_Click"/>
-        <Canvas HorizontalAlignment="Left" Height="480" VerticalAlignment="Top" Width="620" Margin="78,40,0,0">
-            <Ellipse Name="ellipse1" Height="84" Canvas.Left="94" Stroke="Black" Canvas.Top="92" Width="84"/>
+        <Button Name="btn1" Content="Start" HorizontalAlignment="Left" VerticalAlignment="Top" Width="131" Margin="98,525,0,0" Click="btn1_Click" Height="45"/>
+        <Canvas HorizontalAlignment="Left" Height="480" VerticalAlignment="Top" Width="680"  Margin="78,40,0,0">
+            <Ellipse Name="ellipseLeftHand" Height="60" Canvas.Left="94" Stroke="Black" Canvas.Top="92" Width="60"/>
+            <Ellipse Name="ellipseRightHand" Height="60" Canvas.Left="183" Stroke="Black" Canvas.Top="92" Width="60"/>
+            <Ellipse Name="ellipseBody" Height="60" Canvas.Left="272" Stroke="Black" Canvas.Top="92" Width="60"/>
 
         </Canvas>
+        <TextBlock Name="txtRightHand" HorizontalAlignment="Left" Height="79" Margin="172,685,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Width="586" FontSize="48"/>
+        <Label Name="label" Content="Left" FontSize="48" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,600,0,0" Height="123" Width="93"/>
+        <Label Name="label_Copy" Content="Right" FontSize="48" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,680,0,0" Height="123" Width="136"/>
+        <TextBlock Name="txtBody" HorizontalAlignment="Left" Height="79" Margin="172,773,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Width="586" FontSize="48"/>
+        <Label Name="label_Copy1" Content="Body" FontSize="48" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,768,0,0" Height="123" Width="136"/>
+        <TextBlock Name="txtDelta" HorizontalAlignment="Left" Height="75" Margin="916,63,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Width="586" FontSize="48"/>
+        <Label x:Name="label_Copy2" Content="Diff" FontSize="48" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="758,58,0,0" Height="123" Width="127"/>
 
 
 
